# CodeSymphony

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  knip.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  workspace-redesign-plan.md
.claude/: settings.local.json
.cursor/plans/: tanstack_db_adoption_plan_5561ba1c.plan.md
.playwright-cli/: page-2026-04-08T13-38-40-426Z.yml  page-2026-04-08T13-38-40-716Z.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: cli-agent-spec.md  ios-simulator-stream-active-h264-2026-05-01.md  ios-simulator-stream-active-jpeg-2026-05-01.md  ios-simulator-stream-active-jpeg-direct-image-2026-05-01.md  ios-simulator-stream-active-jpeg-direct-image-adaptive-2026-05-01.md  ios-simulator-stream-active-jpeg-direct-image-immediate-2026-05-01.md  ios-simulator-stream-active-jpeg-scale-085-2026-05-01.md  ios-simulator-stream-baseline-2026-05-01.md  ios-simulator-stream-browser-tuning-2026-05-01.md  ios-simulator-stream-comparison-2026-05-01.md  ios-simulator-stream-direct-image-grind-2026-05-01.md  ios-simulator-stream-framebuffer-2026-05-01.md  performance-baseline-thread-navigation-2026-04-26.md  performance-baseline-workspace-thread-2026-04-26.md
patches/: @zed-industries__claude-agent-acp@0.22.2.patch
scripts/: collect-ios-stream-baseline.mjs  measure-ios-native-video-packets.mjs  setup-ws-scrcpy.sh  start-ws-scrcpy.sh
(+600 files in other folders)
