[package]
name = "codesymphony-desktop"
version = "0.1.0"
description = "CodeSymphony desktop shell"
authors = ["CodeSymphony"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
notify-rust = "4.11"
tauri-plugin-notification = "2.2.0"
tauri-plugin-opener = "2.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSButton", "NSView", "NSWindow"] }
